# FastAPI-React-App

./: docker-compose.yml
backend/: main.py  pyproject.toml
backend/routers/: common.py
containers/fastapi/: Dockerfile
frontend/: package-lock.json  package.json
frontend/app/: package-lock.json  package.json
frontend/app/router/: route.tsx
frontend/app/src/: App.tsx
frontend/app/src/components/Contact/: Contact.tsx
frontend/app/src/components/Dialog/: Dialog.tsx
frontend/app/src/components/Header/: Header.tsx
frontend/app/src/components/Home/: Card.tsx  Home.tsx
frontend/app/src/components/Message/: Message.tsx
frontend/app/src/components/Post/: PostDetail.tsx
frontend/app/src/components/certification/: Login.tsx  Register.tsx
frontend/app/src/hooks/: useAuth.ts  useCategory.ts  useGetImageUrl.ts  usePost.ts  useUsers.ts
