[tool.poetry]
name = "fastapi-playground"
version = "0.1.0"
description = ""
authors = ["takuya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.8"
fastapi = "^0.78.0"
psycopg2 = "^2.9.9"
uvicorn= "^0.17.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
